# chatbiodescodificacion

./: .gitignore  Dockerfile  README.md  api_test_cerebras.py  api_test_openrouter.py  crewai_implementation_plan.md  docker-compose.yaml  package-lock.json  pyproject.toml  report.md  requirements.txt  start_docker.sh  stop_docker.sh
docs/funcionalidad/: funcionalidades.md
docs/pruebas/ollama_gpt_oss_120b_cloud/: Ollama_gpt_oss_120b_cloud.odt
docs/pruebas/ollama_gpt_oss_120b_cloud/preguntas/: alergias.md  alergias.odt  berenjenas.md  berenjenas.odt  biodescodificacion.md  biodescodificacion.odt  cadera.md  cadera.odt  dolor.md  dolor.odt  eccema.md  eccema.odt  pedos.md  pedos.odt
src/chatbiodescodificacion/: cerebras_llm.py  crew.py  crew_old.py  entradas_completo.json  main.py  utils.py
src/chatbiodescodificacion/config/: __init__.py  agents.yaml  settings.py  tasks copy.yaml  tasks.yaml
src/chatbiodescodificacion/tools/: tools.py
