[project]
name = "chatbiodescodificacion"
version = "0.1.0"
description = "ChatBiodescodificacion using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
chatbiodescodificacion = "chatbiodescodificacion.main:run"
run_crew = "chatbiodescodificacion.main:run"
train = "chatbiodescodificacion.main:train"
replay = "chatbiodescodificacion.main:replay"
test = "chatbiodescodificacion.main:test"
run_with_trigger = "chatbiodescodificacion.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
